--- a/.github/workflows/generate-hls.yml
+++ b/.github/workflows/generate-hls.yml
@@ -2,41 +2,39 @@ name: Generate PTC Punjabi HLS
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *"   # every 5 minutes
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Install ffmpeg
-      run: sudo apt-get update && sudo apt-get install -y ffmpeg
+      - name: Install FFmpeg
+        run: |
+          sudo apt update
+          sudo apt install -y ffmpeg
 
-    - name: Generate HLS From TS Stream
-      run: |
-        mkdir -p hls
-        ffmpeg \
-        -reconnect 1 -reconnect_at_eof 1 -reconnect_streamed 1 -reconnect_delay_max 2 \
-        -i "http://103.182.170.32:8888/play/a04g" \
-        -c copy \
-        -hls_time 4 \
-        -hls_list_size 5 \
-        -hls_flags delete_segments+independent_segments \
-        hls/index.m3u8
+      - name: Create output folder
+        run: mkdir -p hls/ptc
 
-    - name: Commit and push HLS
-      run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
-        git add hls/*
-        git commit -m "Update HLS" || echo "No changes"
-        git push
+      - name: Run FFmpeg for PTC Punjabi
+        run: |
+          ffmpeg -i "http://103.182.170.32:8888/play/a04g" \
+          -c:v copy -c:a copy \
+          -hls_time 4 \
+          -hls_list_size 5 \
+          -hls_flags delete_segments \
+          -hls_segment_filename "hls/ptc/segment_%03d.ts" \
+          hls/ptc/playlist.m3u8
+
+      - name: Upload HLS to repo
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add .
+          git commit -m "Updated PTC Punjabi HLS"
+          git push
