--- a/.github/workflows/generate-hls.yml
+++ b/.github/workflows/generate-hls.yml
@@ -1,32 +1,45 @@
-addEventListener('fetch', event => {
-  event.respondWith(handleRequest(event.request))
-})
+<!DOCTYPE html>
+<html>
+<head>
+<title>Live Stream - Non Stop</title>
 
-const ORIGINAL_STREAM = "http://103.182.170.32:8888/play/a04g"
-
-async function handleRequest(request) {
-  const url = new URL(request.url)
-
-  // Direct fetch original stream
-  const response = await fetch(ORIGINAL_STREAM, {
-    method: request.method,
-    headers: {
-      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 Chrome/121.0.0.0 Safari/537.36",
-      "Accept": "*/*",
-      "Referer": ORIGINAL_STREAM,
-      "Origin": ORIGINAL_STREAM,
-      "Host": "103.182.170.32"
-    }
-  })
-
-  // Set headers for CORS & no-cache
-  const newHeaders = new Headers(response.headers)
-  newHeaders.set("Access-Control-Allow-Origin", "*")
-  newHeaders.set("Cache-Control", "no-cache")
-  newHeaders.set("Pragma", "no-cache")
-
-  return new Response(response.body, {
-    status: response.status,
-    headers: newHeaders
-  })
+<style>
+body {
+  background: black;
+  margin: 0;
+  overflow: hidden;
 }
+video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+</style>
+
+<script>
+// Prevent pause
+function alwaysPlay() {
+    const v = document.getElementById("player");
+    if (v.paused) v.play();
+}
+
+// Auto reload every 6 seconds (bufferless)
+setInterval(() => {
+    const v = document.getElementById("player");
+    const base = v.src.split("?")[0];
+    v.src = base + "?t=" + Date.now();
+    v.play();
+}, 6000);
+
+setInterval(alwaysPlay, 500); // check every 0.5 sec
+</script>
+
+</head>
+<body>
+
+<video id="player" autoplay playsinline muted>
+    <source src="http://103.182.170.32:8888/play/a04g" type="application/x-mpegURL">
+</video>
+
+</body>
+</html>
