--- a/.github/workflows/generate-hls.yml
+++ b/.github/workflows/generate-hls.yml
@@ -1,50 +1,68 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Bufferless Stream Player</title>
+name: Generate Sony HLS
 
-<style>
-body {
-  background: black;
-  margin: 0;
-  overflow: hidden;
-}
-video {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-}
-</style>
+# trigger manually and on push (you can remove push if you only want manual)
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
-<script>
-function startAutoRefresh() {
-    const video = document.getElementById("player");
+permissions:
+  contents: write  # allow commit/push from workflow
 
-    setInterval(() => {
-        try {
-            const liveURL = "http://103.182.170.32:8888/play/a04g?t=" + Date.now();
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-            // Replace video source without stopping playback
-            const wasPlaying = !video.paused;
+      - name: Install ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
 
-            video.src = liveURL;
+      - name: Create HLS folder
+        run: mkdir -p hls
 
-            if (wasPlaying) {
-                video.play().catch(()=>{});
-            }
-        } catch (e) {}
-    }, 6000);
-}
+      - name: Generate HLS from stream
+        # Use STREAM_URL secret (safer) or replace with literal URL
+        env:
+          STREAM_URL: ${{ secrets.STREAM_URL }}
+        run: |
+          if [ -z "${STREAM_URL}" ]; then
+            echo "STREAM_URL secret is empty. Aborting."
+            exit 1
+          fi
 
-window.onload = startAutoRefresh;
-</script>
+          # remove old TS files (optional)
+          rm -f hls/*.ts hls/index.m3u8
 
-</head>
-<body>
+          # generate HLS segments: keep short playlist, rolling segments
+          ffmpeg -y -hide_banner -loglevel info \
+            -i "${STREAM_URL}" \
+            -c copy \
+            -map 0 \
+            -f hls \
+            -hls_time 5 \
+            -hls_list_size 6 \
+            -hls_flags delete_segments+append_list \
+            -hls_segment_filename "hls/seg%03d.ts" \
+            hls/index.m3u8
 
-<video id="player" autoplay controls playsinline>
-  <source src="http://103.182.170.32:8888/play/a04g" type="application/x-mpegURL">
-</video>
-
-</body>
-</html>
+      - name: Commit and push HLS
+        env:
+          GIT_AUTHOR_NAME: "github-actions"
+          GIT_AUTHOR_EMAIL: "github-actions@github.com"
+        run: |
+          git config user.name "${GIT_AUTHOR_NAME}"
+          git config user.email "${GIT_AUTHOR_EMAIL}"
+          git add hls || true
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update HLS $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+            git push origin HEAD:main
+          fi
