--- a/.github/workflows/generate-hls.yml
+++ b/.github/workflows/generate-hls.yml
@@ -1,68 +1,34 @@
-name: Generate Sony HLS
+name: Fast Disney HLS Proxy
 
-# trigger manually and on push (you can remove push if you only want manual)
 on:
+  schedule:
+    - cron: "*/5 * * * *"
   workflow_dispatch:
-  push:
-    branches:
-      - main
-
-permissions:
-  contents: write  # allow commit/push from workflow
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        uses: actions/checkout@v3
 
       - name: Install ffmpeg
+        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+
+      - name: Fetch Disney stream & repackage
         run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg
-
-      - name: Create HLS folder
-        run: mkdir -p hls
-
-      - name: Generate HLS from stream
-        # Use STREAM_URL secret (safer) or replace with literal URL
-        env:
-          STREAM_URL: ${{ secrets.STREAM_URL }}
-        run: |
-          if [ -z "${STREAM_URL}" ]; then
-            echo "STREAM_URL secret is empty. Aborting."
-            exit 1
-          fi
-
-          # remove old TS files (optional)
-          rm -f hls/*.ts hls/index.m3u8
-
-          # generate HLS segments: keep short playlist, rolling segments
-          ffmpeg -y -hide_banner -loglevel info \
-            -i "${STREAM_URL}" \
+          mkdir -p fast
+          ffmpeg -i "http://103.182.170.32:8888/play/a04g" \
             -c copy \
             -map 0 \
             -f hls \
-            -hls_time 5 \
+            -hls_time 3 \
             -hls_list_size 6 \
             -hls_flags delete_segments+append_list \
-            -hls_segment_filename "hls/seg%03d.ts" \
-            hls/index.m3u8
+            fast/disney.m3u8
 
-      - name: Commit and push HLS
-        env:
-          GIT_AUTHOR_NAME: "github-actions"
-          GIT_AUTHOR_EMAIL: "github-actions@github.com"
-        run: |
-          git config user.name "${GIT_AUTHOR_NAME}"
-          git config user.email "${GIT_AUTHOR_EMAIL}"
-          git add hls || true
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Update HLS $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push origin HEAD:main
-          fi
+      - name: Push to repo
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "auto update fast disney"
+          file_pattern: fast/*
